# sbg_ros_driver

./: .gitignore  CMakeLists.txt  package.xml
cfg/: ELLIPSE_N_settings.cfg
include/: SBGLogtoROSMsg.h  SBGLogtoROSPublisher.inl  SBGLogtoROSPublisher_Visitor.h  sbgconfiguration.h  sbgexceptions.h  sbglogparser.h  sbglogparser.inl  sbglogparser2.h  sbglogparser2_visitor.h  sbgwrapper.h  wrapper.h  wrapper.inl  wrapper_exception.h  wrapper_specialization.h
include/sbglogparser/: isbglogparser.h
include/sbglogparser/boost/: SBGLogtoROSMsg.h.bak  SBGLogtoROSPublisher.h  SBGLogtoROSPublisher.inl  SBGLogtoROSPublisher_Visitor.h  sbglogparser.h
include/sbglogparser/simple/: sbglogparser.h
include/sbglogparser/std/: sbglogparser.h  sbglogparser.inl  sbglogparser_exception.h
include/sbgwrapper/: sbgwrapper.h  sbgwrapper.inl
launch/: ELLIPSE_N.launch
msg/: SbgEComDeviceInfo.msg  SbgLogAbstract.msg  SbgLogDebug0Data.msg  SbgLogDvlData.msg  SbgLogEkfEulerData.msg  SbgLogEkfNavData.msg  SbgLogEkfQuatData.msg  SbgLogEvent.msg  SbgLogFastImuData.msg  SbgLogGpsHdt.msg  SbgLogGpsPos.msg  SbgLogGpsRaw.msg  SbgLogGpsVel.msg  SbgLogImuData.msg  SbgLogMag.msg  SbgLogMagCalib.msg  SbgLogOdometerData.msg  SbgLogPressureData.msg  SbgLogShipMotionData.msg  SbgLogStatusData.msg  SbgLogUsblData.msg  SbgLogUtcData.msg  gps.msg
python/: .gitignore  SbgLogEkfEulerData.h  analyse_de_la_lib_SBG_via_AST_et_string_analysis.txt~  apt_get_clang-3.8.sh  deploy_generated_msg.sh  deploy_generated_sources.sh  dump_ast.py  entry-point.sh  launch_dymp_ast_on_sbgEComBinaryLogs.sh  libclang_show_ast.py  logging.yaml  python_doctests.sh  requirements.txt  sbgEComBinaryLogs.h.ast  virtualenv_create.sh  virtualenv_create_for_python2.7.sh
python/doc/: analyse_de_la_lib_SBG_via_AST_et_string_analysis.txt
python/mako/: CMakeLists.txt  CMakeLists.txt.txt  SBGLogtoROSMsg.cpp.txt  SBGLogtoROSMsg.h  SBGLogtoROSMsg.h.txt  SBGLogtoROSPublisher_Visitor.cpp.txt  SBGLogtoROSPublisher_Visitor.h.txt  wrapper.cpp.txt  wrapper.h.txt  wrapper_specialization.h.txt
python/msg/: SbgLogEkfEulerData.msg  SbgLogEkfNavData.msg  SbgLogEkfQuatData.msg  SbgLogEvent.msg  SbgLogGpsPos.msg  SbgLogGpsRaw.msg  SbgLogUsblData.msg
python/scripts/: apt_get_clang-3.8.sh  virtualenv_get.sh
python/settings/: settings.yml
python/settings/test/: test_yml.py
python/tools/: __init__.py  clang_ast.py  for_clang.py  for_extractions.py  for_generation.py  for_logger.py  for_yaml.py  logging.ini
sbgECom/src/binaryLogs/: sbgEComBinaryLogs.h
sbgECom/src/commands/: sbgEComCmdOutput.c  sbgEComCmdOutput.h
src/: SBGLogtoROSMsg.cpp  SBGLogtoROSMsg.cpp.bak  SBGLogtoROSPublisher.cpp  SBGLogtoROSPublisher_Visitor.cpp  ellipse.cpp  sbglogparser.cpp  sbglogparser2.cpp  sbglogparser2_visitor.cpp  sbgwrapper.cpp
src/sbglogparser/: CMakeLists.txt
src/sbglogparser/boost/: CMakeLists.txt
src/sbglogparser/boost/src/: SBGLogtoROSMsg.cpp.bak  SBGLogtoROSPublisher.cpp  SBGLogtoROSPublisher_Visitor.cpp  sbglogparser.cpp  test_variant.cpp
src/sbglogparser/simple/: CMakeLists.txt
src/sbglogparser/simple/src/: sbglogparser.cpp
src/sbglogparser/std/: CMakeLists.txt
src/sbglogparser/std/src/: sbglogparser.cpp
src/sbgwrapper/: CMakeLists.txt
src/sbgwrapper/src/: sbgwrapper.cpp
src/test/: wrapper.cpp
test_wrapper/: CMakeLists.txt  sbgECom
